testdata/php/shouldfail/LongMethod.php
<?php
/**
 * @package testdata.shouldfail
 */
class LongMethod {
    
    /**
     * Long methods are hard to read, often contain too many variables, and
     * are generally a headache. They can usually be decomposed.
     */
    public function tooLong() {
        $foo = 'foo';
        
        $bar = 'bar';
        
        $baz = 'baz';
        
        if (true) {}
        if (true) {}
        if (true) {}
        
        $foo = 'foo';
        
        $bar = 'bar';
        
        $baz = 'baz';
        
        if (true) {}
        if (true) {}
        if (true) {}
        
        $foo = 'foo';
        
        $bar = 'bar';
        
        $baz = 'baz';
        
        if (true) {}
        if (true) {}
        if (true) {}
        
        $foo = 'foo';
        
        $bar = 'bar';
        
        $baz = 'baz';
        
        if (true) {}
        if (true) {}
        if (true) {}
        
        $foo = 'foo';
        
        $bar = 'bar';
        
        $baz = 'baz';
        
        if (true) {}
        if (true) {}
        if (true) {}
        
        
    }
    
}